# clibsecret

./: Makefile.am  README.md  clibsecret.c  clibsecret.man  configure.ac
